# numbersML

numbersML/: .env.example  .gitignore  .pre-commit-config.yaml  1  AGENT.md  AGENTS.md  ARCHITECTURE_SIMPLIFIED.md  BACKTEST_CLI_INTEGRATION.md  DASHBOARD_CNN_GRU_INTEGRATION.md  DASHBOARD_RESTART_FIX.md  DATA_QUALITY_GUARD.md  DATA_QUALITY_SUMMARY.md  ENRICHMENT_SERVICE_MIGRATION.md  ENRICHMENT_SERVICE_MIGRATION_COMPLETE.md  ENTRY_POINT_MODEL.md  GITHUB_ACTIONS_FIX.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  ML_PIPELINE_DOCUMENTATION.md  ML_PIPELINE_TODO_COMPLETE.md  ML_REDESIGN_COMPLETE.md  PATH_FIXES_SUMMARY.md  PHASE1-COMPLETE.md  PHASE1_COMPLETE_SUMMARY.md  PROJECT-STATUS.md  QUICKSTART.md  QUICK_START.md  QWEN.md  README-SETUP.md  README.md  README_PHASE1_COMPLETE.md  SESSION_CHECKPOINT_2.md  SESSION_CHECKPOINT_5.md  TARGET_VALUE_REDESIGN.md  TEST_DATA_PRESERVATION_NOTES.md  WIDE_VECTOR_LLM.md  add_technical_indicators.py  backtest_trading_tcn.py  check_doge_price.py  (+25 more)
numbersML/.kilo/: package-lock.json
numbersML/.kilocode/: config.json
numbersML/dashboard/: algorithm-instances.html  algorithms.html  api_keys.html  backtest.html  backtest_details.html  backtest_ml.html  backtest_strategy.html  backup.html  chart.html  config.html  config_sets.html  index.html  indicators.html  indicators_charts.html  market.html  orders.html  prediction.html  strategies.html  strategy-instances.html  symbols.html  target_value_chart.html
numbersML/docker/: Dockerfile.test  docker-compose-infra.yml
numbersML/docs/: ARCHITECTURE_SIMPLIFIED.md  CLI_REFERENCE.md  COMPLETE_ML_PIPELINE_SUMMARY.md  CURSOR_PLAN_PHASE3.md  DEBUG_SESSION_LOG.md  ENRICHMENT_SERVICE_MIGRATION_COMPLETE.md  ENTRY_POINT_MODEL.md  FIX_SAVE_POINT_ERROR.md  GITHUB_INFRASTRUCTURE.md  NEXT_SESSION_CHART_MARKERS.md  OPERATOR_RUNBOOK.md  PHASE1-COMPLETE.md  PHASE1_COMPLETE_SUMMARY.md  PHASE4_PLAN.md  PIPELINE_TICKET.md  PROJECT-STATUS.md  QUICKSTART.md  QWEN.md  README.md  REDESIGN_SUMMARY.md  ROLLOUT_CHECKLIST.md  SESSION_SUMMARY_20260414.md  STEP_9_READINESS_REPORT.md  STRATEGY_RUNNER.md  TEMPORAL_CNN_MODEL.md  TEST_SUITE_COMPLETE.md  TRADING_TCN_MODEL.md  WIDE_VECTOR.md  recalculate_indicators_optimization_plan.md  run_backtest.md
numbersML/migrations/: 001_initial_schema.sql  001_target_value_to_jsonb.sql  002_add_predicted_value.sql  003_configuration_sets.sql  003_phase3_strategy_foundation.sql  004_algorithm_instances.sql  004_drop_indicator_keys.sql  004_remove_plpgsql_indicators.sql  004_strategy_instances.sql  005_rename_strategy_to_algorithm.sql  (+13 more)
(+644 files in other folders)
