[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-trading-system"
version = "0.1.0"
description = "Real-time crypto trading data system with dynamic indicators"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Trading System Team", email = "team@example.com"}
]

dependencies = [
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "websockets>=14.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "python-json-logger>=2.0.7",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "jsonschema>=4.20.0",
    "aiohttp>=3.10.0",
    "orjson>=3.11.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.3.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
    "testcontainers>=4.0.0",
    "psutil>=6.0.0",
    "psycopg2-binary>=2.9.9",
]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008"]